# Engine2

./: .clang-format  .clang-tidy  .cmake-format.yaml  .pre-commit-config.yaml  CMakeLists.txt  Makefile  README.md  _application_8h_source.html  _assert_8h.html  _buffer_8h_source.html  _graphic_context_8h.html  _graphic_context_8h_source.html  _layer_8h.html  _layer_8h_source.html  _layer_stack_8cpp.html  _layer_stack_8h.html  _layer_stack_8h_source.html  _log_8h.html  _open_g_l_buffer_8cpp.html  _open_g_l_buffer_8h.html  _open_g_l_context_8cpp.html  _open_g_l_context_8h.html  _open_g_l_context_8h_source.html  _open_g_l_shader_8cpp.html  _open_g_l_texture2_d_8cpp.html  _open_g_l_texture2_d_8h.html  _open_g_l_texture2_d_8h_source.html  _open_g_l_vertex_array_8h.html  _ptrs_8h.html  _ptrs_8h_source.html  _renderer2_d_8cpp.html  _renderer_command_8h_source.html  _shader_8h_source.html  _vertex_array_8cpp.html  _vertex_array_8h.html  _vertex_array_8h_source.html  _windows_window_8cpp.html  class_engine_1_1_application-members.html  class_engine_1_1_application.html  class_engine_1_1_event.html  (+59 more)
.github/workflows/: documentation.yaml  pre-commit.yaml
Engine/: CMakeLists.txt
Engine/assets/: Shader.glsl  quad_shader.glsl
Engine/include/: Engine.h  EntryPoint.h
Engine/include/Engine/: Engine.h  EntryPoint.h
Engine/src/API/: Window.h
Engine/src/Core/: Application.cpp  Application.h
Engine/src/Engine/Core/: Application.cpp  Application.h  Layer.h  LayerStack.cpp  LayerStack.h  Ptrs.h  Time.cpp  Time.h
Engine/src/Engine/ECS/: Components.h  Coordinator.cpp  Coordinator.h  Defines.h  Entity.h  System.h
Engine/src/Engine/Event/: Event.h  WindowEvents.h  WindowEventsPool.h
Engine/src/Engine/Layer/: SceneLayer.cpp  SceneLayer.h
Engine/src/Engine/Log/: Assert.h  Log.cpp  Log.h
Engine/src/Engine/LowAPI/: Window.h
Engine/src/Engine/LowAPI/Input/: Input.h  InputCodes.h
Engine/src/Engine/LowAPI/Renderer/: Buffer.cpp  Buffer.h  GraphicContext.h  GraphicObjectFactory.h  Renderer2D.cpp  Renderer2D.h  RendererCommand.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
Engine/src/Engine/Math/: Math.h  Matrix.cpp  Matrix.h  Vector.cpp  Vector.h
Engine/src/Engine/Scene/: Components.h  SceneLayer.cpp  SceneLayer.h
Engine/src/Engine/Scene/Sys/: CollisionSystem.h  GameLogicSystem.cpp  GameLogicSystem.h  MoveSystem.cpp  MoveSystem.h  Renderer2DSystem.cpp  Renderer2DSystem.h
Engine/src/Engine/Utils/: FileHandler.cpp  FileHandler.h  ImageLoader.cpp  ImageLoader.h
Engine/src/Event/: Event.cpp  Event.h  WindowEventsPool.h
Engine/src/Log/: Assert.h  Log.cpp  Log.h
Engine/src/Platform/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLCommand.cpp  OpenGLContext.cpp  OpenGLContext.h  OpenGLObjectFactory.cpp  OpenGLObjectFactory.h  OpenGLRendererCommand.cpp  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLTexture2D.cpp  OpenGLTexture2D.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
Engine/src/Platform/Windows/: InputWindows.cpp  WindowsWindow.cpp  WindowsWindow.h
Game/: CMakeLists.txt
Game/src/: Game.cpp  GameLayer.cpp  GameLayer.h
Game/src/scripts/: BulletScript.h  EnemyLogic.cpp  EnemyLogic.h  ExpiredEnemyLogic.h  PlayerLogic.h  SpawnerScript.h
cmake/: Docs.cmake  LTO.cmake  Sanitizer.cmake  Tools.cmake  Warnings.cmake
docs/: Doxyfile
docs/html/: _application_8cpp.html  _application_8h.html  _assert_8h_source.html  _buffer_8cpp.html  _buffer_8h.html  _event_8h.html  _event_8h_source.html  _input_8h.html  _input_8h_source.html  _input_codes_8h.html  _input_codes_8h_source.html  _input_windows_8cpp.html  _log_8cpp.html  _log_8h_source.html  _open_g_l_buffer_8h_source.html  _open_g_l_renderer_command_8cpp.html  _open_g_l_shader_8h.html  _open_g_l_shader_8h_source.html  _open_g_l_vertex_array_8cpp.html  _open_g_l_vertex_array_8h_source.html  _renderer2_d_8h.html  _renderer2_d_8h_source.html  _renderer_command_8h.html  _scene_layer_8cpp.html  _scene_layer_8h.html  _scene_layer_8h_source.html  _shader_8cpp.html  _shader_8h.html  _texture_8cpp.html  _texture_8h.html  _texture_8h_source.html  _time_8cpp.html  _time_8h.html  _time_8h_source.html  _window_8h.html  _window_8h_source.html  _window_events_pool_8h.html  _window_events_pool_8h_source.html  _windows_window_8h.html  _windows_window_8h_source.html  (+47 more)
docs/html/search/: all_0.js  all_11.js  all_12.js  all_15.js  all_3.js  all_4.js  all_6.js  all_7.js  all_8.js  all_d.js  all_f.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_7.js  classes_8.js  classes_9.js  classes_c.js  defines_0.js  defines_4.js  defines_5.js  defines_6.js  enums_0.js  enumvalues_10.js  enumvalues_11.js  enumvalues_13.js  enumvalues_14.js  enumvalues_15.js  enumvalues_18.js  enumvalues_2.js  enumvalues_4.js  enumvalues_6.js  enumvalues_b.js  enumvalues_d.js  enumvalues_e.js  enumvalues_f.js  files_7.js  files_8.js  files_9.js  (+19 more)
docs/latex/: refman.tex
search/: all_1.js  all_12.js  all_13.js  all_14.js  all_16.js  all_17.js  all_18.js  all_19.js  all_2.js  all_5.js  all_9.js  all_a.js  all_b.js  all_c.js  all_e.js  classes_0.js  classes_5.js  classes_6.js  classes_a.js  classes_b.js  classes_d.js  defines_1.js  defines_2.js  defines_3.js  enums_1.js  enums_2.js  enumvalues_0.js  enumvalues_1.js  enumvalues_12.js  enumvalues_16.js  enumvalues_17.js  enumvalues_3.js  enumvalues_7.js  enumvalues_8.js  enumvalues_a.js  enumvalues_c.js  files_0.js  files_3.js  files_4.js  files_5.js  (+14 more)
